2005-06-04  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.9.9)

        * Updated documentation and released as version 3.9.9

2005-06-04  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
        
	* t/2_fitstable.t: Change magnitude test to use the log_10 of the 
	  flux.

        * t/4_mpc.t: Fix up MPC tests again

2005-06-03  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/FITSTable.pm: Convert flux to magnitudes with log_10,
	  not natural logarithm.
	
2005-03-30  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/ASCII.pm: base class for ASCII-based IO

	* IO/Binary.pm: base class for binary-based IO

	* Catalog.pm: added FITSTable support; modified IO class handling
	  to farm off to IO classes that inherit from either IO/ASCII.pm
	  or IO/Binary.pm to allow for reading in of different types of
	  files; modify ID matching to use string comparison instead of
	  numerical comparison in case IDs aren't numbers.

	* IO/Astrom.pm, IO/Cluster.pm, IO/FINDOFF.pm, IO/GaiaPick.pm,
	  IO/JCMT.pm, IO/SExtractor.pm, IO/STL.pm, IO/Simple.pm,
	  IO/TST.pm, IO/UKIRTBS.pm, IO/VOTable.pm: inherit from IO/ASCII.pm.

	* IO/FITSTable.pm: new module to allow reading in of binary FITS
	  tables.

2005-03-22  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/FINDOFF.pm: Remove letters from ID string before writing.
	  This is done because FINDOFF doesn't understand non-integers.

2005-02-25  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Catalog.pm (filter_by_id): Use quotemeta function to make sure
	  that things like + and () are escaped before being passed to the
	  regex engine.

2005-02-15  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/Astrom.pm: Add epoch of observation support.

	* Catalog.pm: Allow newer versions of Astro::Coords to be used
	  without breaking up output from the ra and dec methods.

	* Star/Star.pm: Add wcs method allowing for a world coordinate
	  system to be associated with a star. Allow for calculation of x/y